--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,3 +7,6 @@ services:
       - "5000:5000"
     environment:
       - GROQ_API_KEY=${GROQ_API_KEY}
+      - HOST=${HOST}
+    volumes:
+      - ./app:/app
