--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
       - "5000:5000"
     environment:
       - GROQ_API_KEY=${GROQ_API_KEY}
+      - ELEVEN_LABS_KEY=${ELEVEN_LABS_KEY}
+      - API_KEY=${API_KEY}
       - HOST=${HOST}
     volumes:
       - ./app:/app
