fix: buildrun secrets

--- a/.github/workflows/buildrun.yml
+++ b/.github/workflows/buildrun.yml
@@ -6,6 +6,11 @@ on:
             environment:
                 required: true
                 type: string
+        secrets:
+            DOCKER_USERNAME:
+                required: true
+            DOCKER_PASSWORD:
+                required: true
 jobs:
     docker-build:
         runs-on: ubuntu-latest
