--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Build Docker Image
-        run: |
-          docker build -t triagem_facil_web .
-
       - name: Generate deployment package
         run: |
           # Criar pasta temporária para os arquivos
@@ -39,7 +35,7 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
+          role-to-assume: 'arn:aws:iam::698974420629:role/github-actions-pipeline'
           aws-region: us-east-1
 
       - name: Upload to S3
